tools/vz/pkg/internal/test/cluster/problem-pods-install/cluster-snapshot/verrazzano-ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw/logs.txt
# Copyright (c) 2023, 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
2022-06-16T10:20:07.483758Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-06-16T10:20:07.483813Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=
INBOUND_PORTS_EXCLUDE=15090,15021,80,443,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-06-16T10:20:07.484398Z	info	Writing following contents to rules file: /tmp/iptables-rules-1655374807483863405.txt274356351
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-06-16T10:20:07.484455Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1655374807483863405.txt274356351
2022-06-16T10:20:07.501935Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1655374807501835801.txt2690425367

2022-06-16T10:20:07.501986Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1655374807501835801.txt2690425367
2022-06-16T10:20:07.513028Z	info	Running command: iptables-save
2022-06-16T10:20:07.525035Z	info	Command output:
# Generated by iptables-save v1.4.21 on Thu Jun 16 10:20:07 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Thu Jun 16 10:20:07 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
==== START logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
-------------------------------------------------------------------------------
NGINX Ingress controller
  Release:       1.1.1-20220413170248-b60724ed1
  Build:         git-b60724ed1
  Repository:    https://github.com/verrazzano/ingress-nginx.git
  nginx version: nginx/1.19.9

-------------------------------------------------------------------------------

W0616 10:20:53.977631       7 client_config.go:615] Neither --kubeconfig nor --master was specified.  Using the inClusterConfig.  This might not work.
I0616 10:20:53.978136       7 main.go:223] "Creating API client" host="https://REDACTED-IP4-ADDRESS:443"
W0616 10:20:58.989275       7 main.go:264] Initial connection to the Kubernetes API server was retried 3 times.
I0616 10:20:58.989322       7 main.go:267] "Running in Kubernetes cluster" major="1" minor="22" git="v1.22.5" state="clean" commit="c999fea1e6dbf111d64000dfaaff45edaa4c34d2" platform="linux/amd64"
I0616 10:20:58.997610       7 main.go:86] "Valid default backend" service="ingress-nginx/ingress-controller-ingress-nginx-defaultbackend"
I0616 10:20:59.283535       7 main.go:104] "SSL fake certificate created" file="/etc/ingress-controller/ssl/default-fake-certificate.pem"
I0616 10:20:59.355849       7 nginx.go:255] "Starting NGINX Ingress controller"
I0616 10:20:59.401214       7 event.go:282] Event(v1.ObjectReference{Kind:"ConfigMap", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller", UID:"188f6889-3d05-4294-aae4-eb2e8e268ab7", APIVersion:"v1", ResourceVersion:"3882", FieldPath:""}): type: 'Normal' reason: 'CREATE' ConfigMap ingress-nginx/ingress-controller-ingress-nginx-controller
I0616 10:21:00.462328       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/verrazzano-ingress" ingressclass="_"
I0616 10:21:00.462512       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"verrazzano-ingress", UID:"e6b7fc45-a87b-448f-a897-91bec1e2bc28", APIVersion:"networking.k8s.io/v1", ResourceVersion:"3605", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:21:00.464592       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/verrazzano-tls"
I0616 10:21:00.557200       7 nginx.go:297] "Starting NGINX process"
I0616 10:21:00.557334       7 leaderelection.go:248] attempting to acquire leader lease ingress-nginx/ingress-controller-leader...
I0616 10:21:00.558431       7 controller.go:155] "Configuration changes detected, backend reload required"
I0616 10:21:00.578647       7 leaderelection.go:258] successfully acquired lease ingress-nginx/ingress-controller-leader
I0616 10:21:00.578716       7 status.go:84] "New leader elected" identity="ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw"
I0616 10:21:00.666761       7 controller.go:172] "Backend successfully reloaded"
I0616 10:21:00.666846       7 controller.go:183] "Initial sync, sleeping for 1 second"
I0616 10:21:00.666947       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
I0616 10:21:29.662610       7 store.go:424] "Found valid IngressClass" ingress="cattle-system/rancher" ingressclass="_"
I0616 10:21:29.663442       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"cattle-system", Name:"rancher", UID:"b2054a1b-7ac0-4e7f-9dfb-e41c831a7841", APIVersion:"networking.k8s.io/v1", ResourceVersion:"4892", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
W0616 10:21:29.663657       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "cattle-system/tls-rancher-ingress" in local store
W0616 10:21:29.663768       7 endpoints.go:80] Error obtaining Endpoints for Service "cattle-system/rancher": no object matching key "cattle-system/rancher" in local store
W0616 10:21:29.663795       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:29.663839       7 controller.go:1306] Error getting SSL certificate "cattle-system/tls-rancher-ingress": local SSL certificate cattle-system/tls-rancher-ingress was not found. Using default certificate
I0616 10:21:29.663953       7 controller.go:155] "Configuration changes detected, backend reload required"
W0616 10:21:29.743989       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "cattle-system/tls-rancher-ingress" in local store
I0616 10:21:29.744568       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"cattle-system", Name:"rancher", UID:"b2054a1b-7ac0-4e7f-9dfb-e41c831a7841", APIVersion:"networking.k8s.io/v1", ResourceVersion:"4902", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:21:29.790039       7 controller.go:172] "Backend successfully reloaded"
I0616 10:21:29.790467       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
I0616 10:21:30.911751       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:21:30.916882       7 backend_ssl.go:65] "Adding secret to local store" name="cattle-system/tls-rancher-ingress"
W0616 10:21:32.997293       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:36.331268       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:44.124351       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:47.458139       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:50.791407       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:21:54.125259       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:21:55.151498       7 store.go:424] "Found valid IngressClass" ingress="keycloak/keycloak" ingressclass="nginx"
W0616 10:21:55.151921       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "keycloak/keycloak-tls" in local store
I0616 10:21:55.152309       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"keycloak", Name:"keycloak", UID:"51b5cb3b-be10-4b6f-ad3d-9814e5e75cfd", APIVersion:"networking.k8s.io/v1", ResourceVersion:"5358", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:21:56.268042       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/vmi-system-kiali" ingressclass="_"
I0616 10:21:56.268238       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"vmi-system-kiali", UID:"b6af833e-abb6-42f6-a046-45250b332b05", APIVersion:"networking.k8s.io/v1", ResourceVersion:"5383", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
W0616 10:21:56.269006       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "verrazzano-system/system-tls-kiali" in local store
I0616 10:21:56.677873       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:21:56.680814       7 backend_ssl.go:65] "Adding secret to local store" name="keycloak/keycloak-tls"
I0616 10:21:57.111970       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:21:57.114424       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/system-tls-kiali"
W0616 10:21:57.458624       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:21:57.458820       7 controller.go:155] "Configuration changes detected, backend reload required"
I0616 10:21:57.608006       7 controller.go:172] "Backend successfully reloaded"
I0616 10:21:57.608414       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
W0616 10:22:00.791979       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:22:56.039466       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:22:58.146288       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/vmi-system-prometheus" ingressclass="_"
W0616 10:22:58.147766       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "verrazzano-system/system-tls-prometheus" in local store
I0616 10:22:58.147931       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"vmi-system-prometheus", UID:"3b581c89-ae9f-4323-9035-df8bcd40e10f", APIVersion:"networking.k8s.io/v1", ResourceVersion:"5812", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:22:58.917044       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:22:58.919556       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/system-tls-prometheus"
W0616 10:22:59.373420       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:22:59.373706       7 controller.go:155] "Configuration changes detected, backend reload required"
I0616 10:22:59.507054       7 controller.go:172] "Backend successfully reloaded"
I0616 10:22:59.507311       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
W0616 10:23:02.706712       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:23:04.343374       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/vmi-system-grafana" ingressclass="_"
W0616 10:23:04.344135       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "verrazzano-system/system-tls-grafana" in local store
I0616 10:23:04.344147       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"vmi-system-grafana", UID:"d9869f76-e227-4331-8be3-b038f6cd12b1", APIVersion:"networking.k8s.io/v1", ResourceVersion:"5979", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:23:05.784359       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:23:05.946408       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/system-tls-grafana"
W0616 10:23:06.040510       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:23:06.040678       7 controller.go:155] "Configuration changes detected, backend reload required"
I0616 10:23:06.172011       7 controller.go:172] "Backend successfully reloaded"
I0616 10:23:06.172254       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
I0616 10:23:07.283436       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/vmi-system-es-ingest" ingressclass="_"
W0616 10:23:07.283821       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "verrazzano-system/system-tls-es-ingest" in local store
I0616 10:23:07.284320       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"vmi-system-es-ingest", UID:"26057b9a-0d7d-4e19-bf2d-e69b1c89ca7a", APIVersion:"networking.k8s.io/v1", ResourceVersion:"6066", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:23:08.909622       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:23:09.032994       7 store.go:424] "Found valid IngressClass" ingress="verrazzano-system/vmi-system-kibana" ingressclass="_"
I0616 10:23:09.033304       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"verrazzano-system", Name:"vmi-system-kibana", UID:"27e06441-2d2d-4fe4-88c0-bd632d6a8211", APIVersion:"networking.k8s.io/v1", ResourceVersion:"6113", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
W0616 10:23:09.373422       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:23:09.373567       7 controller.go:1306] Error getting SSL certificate "verrazzano-system/system-tls-es-ingest": local SSL certificate verrazzano-system/system-tls-es-ingest was not found. Using default certificate
W0616 10:23:09.373604       7 controller.go:1306] Error getting SSL certificate "verrazzano-system/system-tls-kibana": local SSL certificate verrazzano-system/system-tls-kibana was not found. Using default certificate
I0616 10:23:09.373797       7 controller.go:155] "Configuration changes detected, backend reload required"
I0616 10:23:09.383009       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/system-tls-es-ingest"
W0616 10:23:09.383045       7 backend_ssl.go:45] Error obtaining X.509 certificate: no object matching key "verrazzano-system/system-tls-kibana" in local store
I0616 10:23:09.609675       7 controller.go:172] "Backend successfully reloaded"
I0616 10:23:09.610469       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw", UID:"9f870e88-0360-4e49-82d2-afaf34733754", APIVersion:"v1", ResourceVersion:"4575", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
I0616 10:23:10.878884       7 store.go:566] "Secret was added and it is used in ingress annotations. Parsing" REDACTED
I0616 10:23:10.943688       7 backend_ssl.go:65] "Adding secret to local store" name="verrazzano-system/system-tls-kibana"
W0616 10:23:12.706820       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:23:16.040090       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:23:22.744229       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:23:30.501475       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:23:33.835877       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:24:08.452191       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
W0616 10:24:11.786320       7 controller.go:1083] Service "cattle-system/rancher" does not have any active Endpoint.
I0616 10:24:36.810486       7 store.go:597] "secret was updated and it is used in ingress annotations. Parsing" REDACTED
I0616 10:26:59.963959       7 event.go:282] Event(v1.ObjectReference{Kind:"Ingress", Namespace:"keycloak", Name:"keycloak", UID:"51b5cb3b-be10-4b6f-ad3d-9814e5e75cfd", APIVersion:"networking.k8s.io/v1", ResourceVersion:"10165", FieldPath:""}): type: 'Normal' reason: 'Sync' Scheduled for sync
I0616 10:27:01.098279       7 store.go:597] "secret was updated and it is used in ingress annotations. Parsing" REDACTED
I0616 10:27:01.330108       7 backend_ssl.go:57] "Updating secret in local store" name="keycloak/keycloak-tls"
==== END logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
2022-06-16T10:20:54.246993Z	info	FLAG: --concurrency="2"
2022-06-16T10:20:54.247028Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-06-16T10:20:54.247035Z	info	FLAG: --help="false"
2022-06-16T10:20:54.247039Z	info	FLAG: --log_as_json="false"
2022-06-16T10:20:54.247043Z	info	FLAG: --log_caller=""
2022-06-16T10:20:54.247047Z	info	FLAG: --log_output_level="default:info"
2022-06-16T10:20:54.247050Z	info	FLAG: --log_rotate=""
2022-06-16T10:20:54.247054Z	info	FLAG: --log_rotate_max_age="30"
2022-06-16T10:20:54.247058Z	info	FLAG: --log_rotate_max_backups="1000"
2022-06-16T10:20:54.247062Z	info	FLAG: --log_rotate_max_size="104857600"
2022-06-16T10:20:54.247065Z	info	FLAG: --log_stacktrace_level="default:none"
2022-06-16T10:20:54.247073Z	info	FLAG: --log_target="[stdout]"
2022-06-16T10:20:54.247077Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-06-16T10:20:54.247081Z	info	FLAG: --outlierLogPath=""
2022-06-16T10:20:54.247084Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-06-16T10:20:54.247102Z	info	FLAG: --proxyLogLevel="warning"
2022-06-16T10:20:54.247106Z	info	FLAG: --serviceCluster="istio-proxy"
2022-06-16T10:20:54.247109Z	info	FLAG: --stsPort="0"
2022-06-16T10:20:54.247113Z	info	FLAG: --templateFile=""
2022-06-16T10:20:54.247117Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-06-16T10:20:54.247131Z	info	FLAG: --vklog="0"
2022-06-16T10:20:54.247139Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-06-16T10:20:54.247536Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::a469:cbff:fe5c:431d] type=sidecar id=ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-06-16T10:20:54.247643Z	info	Apply proxy config from env {}

2022-06-16T10:20:54.248918Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-06-16T10:20:54.248943Z	info	JWT policy is third-party-jwt
2022-06-16T10:20:54.272863Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-06-16T10:20:54.272955Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-06-16T10:20:54.272937Z	info	Opening status port 15020
2022-06-16T10:20:54.273255Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-06-16T10:20:54.298859Z	info	ads	All caches have been synced up in 57.863543ms, marking server ready
2022-06-16T10:20:54.299654Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-06-16T10:20:54.299702Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-06-16T10:20:54.299771Z	info	sds	Starting SDS grpc server
2022-06-16T10:20:54.300438Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-06-16T10:20:54.302501Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-06-16T10:20:54.305282Z	info	Starting proxy agent
2022-06-16T10:20:54.305333Z	info	Epoch 0 starting
2022-06-16T10:20:54.305365Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-06-16T10:20:54.636963Z	info	cache	generated new workload certificate	latency=337.612244ms ttl=23h59m59.363053258s
2022-06-16T10:20:54.637014Z	info	cache	Root cert has changed, start rotating root cert
2022-06-16T10:20:54.637040Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-06-16T10:20:54.637133Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.36287113s
2022-06-16T10:20:55.145027Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-16T10:20:55.523423Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw.ingress-nginx-1
2022-06-16T10:20:55.523608Z	info	cache	returned workload certificate from cache	ttl=23h59m58.47639825s
2022-06-16T10:20:55.524141Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw.ingress-nginx resources:1 size:9.2kB resource:default
2022-06-16T10:20:55.564055Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw.ingress-nginx-2
2022-06-16T10:20:55.564230Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.435778195s
2022-06-16T10:20:55.564499Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-06-16T10:20:59.022832Z	info	Readiness succeeded in 4.780176457s
2022-06-16T10:20:59.023413Z	info	Envoy proxy is ready
2022-06-16T10:48:07.753796Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-vmxbw ====
